[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rentvine-mcp"
version = "0.1.0"
description = "MCP server for Rentvine property management — works with Claude Desktop, Claude Code, and any MCP client"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
rentvine-mcp = "rentvine_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["rentvine_mcp"]
